# docs/swagger.json
@@ -62,6 +62,52 @@
                     }
                 }
             }
+        },
+        "/messages-batch": {
+            "post": {
+                "description": "Send Message",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Messages"
+                ],
+                "summary": "Send Message",
+                "parameters": [
+                    {
+                        "description": "send message request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.SendMessageBatch"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.SendMessageBatch"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/main.SendMessageBatch"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.SendMessageBatch"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -70,6 +116,17 @@
             "properties": {
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "main.SendMessageBatch": {
+            "type": "object",
+            "properties": {
+                "messages": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
